--- a/manifest.json
+++ b/manifest.json
@@ -18,7 +18,8 @@
         /* 模块配置 */
         "modules" : {
             "OAuth" : {},
-            "Share" : {}
+            "Share" : {},
+            "Payment" : {}
         },
         /* 应用发布信息 */
         "distribute" : {
@@ -60,6 +61,11 @@
                     }
                 },
                 "share" : {
+                    "weixin" : {
+                        "appid" : "wxc64d5446a31ca86c"
+                    }
+                },
+                "payment" : {
                     "weixin" : {
                         "appid" : "wxc64d5446a31ca86c"
                     }
